--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@pinata/sdk": "^1.1.26",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "form-data": "^4.0.0",
     "formidable": "^2.1.1",
     "nodemon": "^2.0.22",
+    "pg": "^8.10.0",
+    "postgres": "^3.3.4",
     "sync-request": "^6.1.0"
   }
 }
