--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "form-data": "^4.0.0",
     "formidable": "^2.1.1",
     "greensms": "^1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
     "postgres": "^3.3.4",
