--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ bower_components
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
+var/
 
 # Dependency directories
 node_modules/
@@ -118,7 +119,7 @@ dist
 
 # TernJS port file
 .tern-port
-var/data/*
+
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
