--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
     "postgres": "^3.3.4",
+    "sharp": "^0.32.1",
     "sync-request": "^6.1.0"
   }
 }
