--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "ip": "^1.1.8",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.10.0",
+    "pg-pool": "^3.6.1",
     "postgres": "^3.3.4",
+    "sharp": "^0.32.6",
     "sync-request": "^6.1.0"
   }
 }
